# rust-in-practice

./: .gitignore  Readme.md
api-event-axum/: Cargo.toml  Readme.md
api-event-axum/src/: auth.rs  event.rs  main.rs  user.rs
api-vehicle-axum/: .gitignore  Cargo.toml  Readme.md
api-vehicle-axum/src/: main.rs  vehicle.rs
axum-api/: Cargo.toml
axum-api/src/: main.rs
collections/basic/src/: main.rs
concurrency/basic/src/: main.rs
concurrency/creating-threads/: Cargo.toml
concurrency/creating-threads/src/: main.rs
concurrency/moving-value-in-threads/: Cargo.toml
concurrency/moving-value-in-threads/src/: main.rs
concurrency/passing-message-between-threads/: Cargo.toml
concurrency/passing-message-between-threads/src/: main.rs
concurrency/sharing-states-between-threads/: Cargo.toml
concurrency/sharing-states-between-threads/src/: main.rs
experiment/: .gitignore
experiment/atomics-rust/01_threads/: Cargo.toml
experiment/error-handling-exp/: Cargo.toml
experiment/error-handling-exp/src/: main.rs
experiment/litesvm/: Notes.md
experiment/projects/basic-transfer-hook/: Anchor.toml
experiment/projects/figuring/: kv-store-rs.md
experiment/rektoff/02_statics/: Cargo.toml
experiment/rektoff/03_logging_memory_region/: Cargo.toml  Readme.md
experiment/rektoff/03_simple_log_contract/: Readme.md
experiment/rektoff/capstone_bootcamp_3_/: INSTRUCTIONS.md
experiment/rust-by-example/: .gitignore  formatted.rs  heap.rs
experiment/the-dev-method/: Readme.md
experiment/the-dev-method/02_mini-worker-pool/: Cargo.toml
experiment/the-dev-method/refcell/: Readme.md
litesvm/: .gitignore
litesvm/01_basics/: Cargo.toml  Notes.md
litesvm/01_basics/tests/: minimal-example.rs
litesvm/02_escrow_litesvm/: Anchor.toml
postgres/bookstore/: Cargo.toml
postgres/bookstore/migrations/: 20260508010736_000001_books_table.sql
postgres/bookstore/src/: main.rs
postgres/taskstore/: .env.example  Cargo.toml
postgres/taskstore/migrations/: 20260510133954_task_table.sql
postgres/taskstore/src/: main.rs
projects/basic-transfer-hook/tests/: basic-transfer-hook.ts
projects/images/: metadata.json
projects/solan-non-tranferrable/: Cargo.toml
projects/solana-non-tranferable/: Readme.md
projects/solana-non-tranferable/src/: main.rs
projects/solana-non-transferable-token-with-metadata/: Cargo.toml  Readme.md
projects/solana-non-transferable-token-with-metadata/src/: main.rs
redis/basic-redis/producer/: Cargo.toml
redis/basic-redis/worker/: Cargo.toml
rektoff/: .gitignore  heap.rs
rektoff/00_heap_example/src/: main.rs
rektoff/00_test_questions/: Cargo.toml
rektoff/00_test_questions/practices/: 02_stack_memory_tuples.rs  04_dynamic_vec_growth.rs  05_callstack_function_calls.rs  06_static_memory_scope_error.rs  07_research_investigate_possible_memory_layouts.rs
rektoff/01_hello-world/: Anchor.toml  Readme.md
rektoff/02_statics/: commands.md
rektoff/03_logging_memory_region/: Readme.md
rektoff/03_logging_memory_region/client/: Cargo.toml
rektoff/03_logging_memory_region/program/: Cargo.toml
rektoff/03_logging_memory_region/program/src/: lib.rs
rektoff/03_simple_log_contract/: Cargo.toml  Readme.md
rektoff/04_surfpool/counter/: Anchor.toml  txtx.yml
rektoff/capstone_bootcamp_3_/submission/: SECURITY_REPORT.md
rektoff/lesson1/heap_example_1/: Cargo.toml
rektoff/module2/07_solana_fundaments/hello-world/client/: Cargo.toml
rektoff/module2/07_solana_fundaments/hello-world/client/idls/: hello_world.json
rektoff/questions/: Cargo.toml
rektoff/questions/practices/: 01_stack_memory_array.rs  03_stack_heap_static_memory.rs  08_ownership_string.rs
rust-by-example/: comment.rs  hello.rs
rust-by-example/hello/src/: hello  main.rs
rust-xp-valkey-stream/: Readme.md
rust-xp-valkey-stream/examples/: c02-xadd.rs  c03-async.rs  c04-xgroup.rs  c05-groups.rs  ch01-simple.rs
rustlings/exercises/00_intro/: intro2.rs
rustlings/exercises/01_variables/: variables4.rs
rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types3.rs
rustlings/exercises/06_move_semantics/: README.md
rustlings/exercises/07_structs/: structs3.rs
rustlings/exercises/08_enums/: enums3.rs
rustlings/exercises/11_hashmaps/: hashmaps3.rs
rustlings/exercises/12_options/: options1.rs  options2.rs
rustlings/exercises/13_error_handling/: errors4.rs  errors6.rs
rustlings/exercises/14_generics/: generics1.rs  generics2.rs
rustlings/exercises/15_traits/: traits1.rs
rustlings/exercises/17_tests/: tests1.rs  tests3.rs
rustlings/exercises/18_iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs
rustlings/exercises/19_smart_pointers/: arc1.rs
rustlings/exercises/23_conversions/: from_into.rs  from_str.rs
rustlings/exercises/quizzes/: quiz3.rs
statics/src/: main.rs
the-dev-method/: Readme.md
the-dev-method/00_shared-state/: readme.md
the-dev-method/01_multithread-counter/: Cargo.toml
the-dev-method/01_multithread-counter/src/: main.rs
the-dev-method/02_mini-worker-pool/src/: main.rs
the-dev-method/async-await/: notes.md
the-dev-method/attr_proc_macro_ground/: Cargo.toml
the-dev-method/attr_proc_macro_ground/my_attr_macro/: Cargo.toml
the-dev-method/declarative_macro_ground/: Cargo.toml
the-dev-method/declarative_macro_ground/src/: main.rs
the-dev-method/macro_playground/src/: main.rs
the-dev-method/procedural-macro-ground/: Cargo.toml
the-dev-method/procedural-macro-ground/app/: Cargo.toml
the-dev-method/procedural-macro-ground/app/src/: main.rs
the-dev-method/procedural-macro-ground/hey_nishant/: Cargo.toml
the-dev-method/procedural-macro-ground/hey_nishant/src/: lib.rs
the-dev-method/procedural-macro-ground/my_macro/: Cargo.toml
the-dev-method/procedural-macro-ground/my_macro/src/: lib.rs
the-dev-method/shared-state/: readme.md
vision-rs/: .gitignore  Cargo.toml
vision-rs/src/: main.rs
(+65 files in other folders)
