[package]
name = "vision-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8", features = ["macros"]}
tokio = {version = "1.52.1", features = ["rt-multi-thread" , "macros"]}
axum-macros = { version = "0.5.0-rc.1" }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.23.1", features = ["v4", "serde"]}
# [dependencies.imageproc]
# version = "0.24.0"
# default-features = false
# features = ["imageops"]

# [dependencies.log]
# version = "0.4.14"
