[package]
name = "solan-non-tranferrable"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
solana-client = "3.1"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
tokio = { version = "1", features = ["full"] }
