[package]
name = "solana-non-transferable-token-with-metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bs58 = "0.5.1"
dotenvy = "0.15.7"
solana-client = "3.1"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
spl-token-metadata-interface = "0.8.0"
tokio = { version = "1", features = ["full"] }
