[package]
name = "simple_log_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = "3.0.0"

[lib]
crate-type = [
    "cdylib",
] #This line produce .so file , when we build program `cargo-build-sbf`


[profile.release] #It used for optimization
lto = true        # link time optimization
opt-level = "s"   #size optimization
codegen-units = 1 #compile everything in one unit
