[package]
name = "client"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
solana-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status = "2.3"
anyhow = "1.0"
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
tokio = { version = "1.0", features = ["full"] }
